Remove extra padding in <pre><code> HTML tags (fixes #32)

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -67,6 +67,7 @@ pre{
 }
 pre code{
 	font-size:12px;
+	padding:0;
 }
 code{
 	padding:2px 4px;
